package com.simpleboard.board.permission.domain;

public enum Permission {
  DELETE_BOARD,
  CREATE_BOARD
}
