package com.simpleboard.board.permission.domain;

public enum RoleName {
  BOARD_ADMIN
}
