@startuml
package "permissionPolicy" {
  class PermissionPolicy <<Aggregate Root>>{
    - Long boardId
    - List<ManagerAssignment> managerAssignments
    + of(userId, boardId)
    + ManagerAssignment findAssignment(Long userId)
    + deleteAssignment(Long userId)
    + boolean can(Long userId, Permission permission)
    + assignRole(Long userId, RoleName roleName)
    + delegateRole(Long from, UserId to, RoleName roleName)
  }

  entity ManagerAssignment <<Entity>>{
    - Long managerAssignmentId
    - Long userId
    - Role role
    + boolean hasPermission(Permission permission)
  }

  struct Role <<Value Object>>{
    - RoleName roleName
    - Set<Permission> permissions
    + Role of(RoleName roleName)
    + boolean hasPermission(Permission permission)
  }

  enum RoleName {
    POST_ADMIN
  }

  enum Permission {
    DELETE_BOARD
    CREATE_BOARD
  }

  PermissionPolicy "1" o-- "*" ManagerAssignment
  ManagerAssignment "*" --> "1" Role
  Role --> RoleName
  Role --> Permission
}
@enduml